--- a/src/pages/Home/Banner/Banner.css
+++ b/src/pages/Home/Banner/Banner.css
@@ -1,6 +1,5 @@
-@media screen and (min-width:380px){
-   div button{
-   
-        display: flex;
+@media only screen and (min-width: 400px) {
+    .explore {
+    display: flex;
     }
-}
+  }
