--- a/src/pages/Home/Banner/Banner.css
+++ b/src/pages/Home/Banner/Banner.css
@@ -1,5 +1,5 @@
-@media only screen and (min-width: 400px) {
+/* @media  screen and (min-width: 400px) {
     .explore {
     display: flex;
-    }
-  }
+    } */
+  
